--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <ul type="circle">
           <li><a href="#about" target="_blank">About</a></li>
           <li><a href="#vijay">Vijay</a></li>
+          <li><a href="forms.html" target="_blank">Personal Info</a></li>
         </ul>
       </nav>
     </header>
