--- a/forms.html
+++ b/forms.html
@@ -159,6 +159,7 @@
       </marquee>
       <br />
       <a href="#" target="_top"><button>Back To Top</button></a>
+      <a href="index.html" target="_self"><button>Previous Page</button></a>
     </footer>
   </body>
 </html>
